TestSuite/PascalABCTests/errors/err0090.pas
type TClass = class
procedure Test; static;abstract;
end;

var t : TClass;

begin
end.